--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
+    "immer": "^9.0.1",
+    "nanoid": "^3.1.22",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
